--- a/public/css/style.css
+++ b/public/css/style.css
@@ -245,6 +245,16 @@ body {
 	padding: 10px;
 }
 
+.light2 {
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	border: solid 1px #ddd;
+	opacity: 0.5;
+	display: inline-block;
+	padding: 10px;
+}
+
 .green {
 	background: rgb(39, 232, 51);
 }
@@ -255,6 +265,12 @@ body {
 
 .red {
 	background: rgb(251, 18, 47);
+}
+.current {
+	background: rgb(0, 92, 179);
+}
+.total {
+	background: rgb(181, 187, 205);
 }
 
 .active {
