--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,9 @@ body {
 	color: #222;
 	background-color: #fafafa;
 }
+/*@media screen and (max-width:768px) {
+	body {padding-top: 40px;}
+}*/
 
 .container {
 	margin-bottom: 10px;
@@ -73,7 +76,7 @@ body {
 	border-color: #996633;
 	border-radius: 0;
 	border: 0;
-	height: 40px;
+	/*height: 40px;*/
 	color: white;
 }
 
