--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,7 @@ body {
 
 .panel {
 	margin: 10px -15px 0 -15px;
-	border-radius: 0;
+	border-radius: 5px 5px 0px 0px;
 	box-shadow: 0 2px 2px rgba(0,0,0,0.1);
 }
 
