--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,45 +1,3 @@
-/*
-#outerContainer {
-	height: 100%;
-	padding: 5px;
-}
-.container > hr {
-	margin: 30px 0;
-}
-.accordion-group {
-	background-color: white;
-	border-color: black;
-	box-shadow: 2px 2px 2px #888;
-}
-#header {
-	border: 1px solid black;
-	background-color: #333;
-	background-image: -webkit-linear-gradient(#3E3E3E, #131313);
-	height: 26px;
-	color: white;
-	font-size: 1.2em;
-	padding-top: 5px;
-	text-align: center;
-}
-#productName {
-	font-size: 0.7em;
-	margin: -1px 0 0 10px;
-}
-#title {
-	font-size: 1.1em;
-}
-.accordion-toggle {
-	font-size: 1.2em;
-	line-height: 30px;
-	font-weight: bold;
-}
-.alert {
-	display: none;
-	margin-bottom: 4px;
-	box-shadow: 2px 2px 2px #888;
-	border: solid 1px black
-}
-*/
 
 body {
 	font-family: "Helvetica Neue-Light","Helvetica Neue",Helvetica,Arial,sans-serif !important;
@@ -48,6 +6,7 @@ body {
 	line-height: 1.428571429;
 	color: #222;
 	background-color: #fafafa;
+	padding-top:60px;
 }
 /*@media screen and (max-width:768px) {
 	body {padding-top: 40px;}
@@ -66,7 +25,7 @@ body {
 }
 
 .navbar {
-	position: relative;
+	/*position: relative;*/
 	margin-bottom: 2px;
 	text-shadow: 1px 1px #333;
 }
@@ -120,21 +79,7 @@ body {
 	box-shadow: 0 2px 2px rgba(0,0,0,0.1);
 }
 
-/*.input-group {
-	margin-bottom: 5px;
-}*/
 
-/*#connectionStatus {
-	padding: 12px 0px 12px 15px;
-	font-size: 13px;
-	line-height: 21px;
-	color: white;
-	margin: 0;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	max-width: 50%;
-}*/
 
 #logContents {
 	padding: 0;
@@ -157,47 +102,6 @@ body {
 	}
 }
 
-/*#subscribeList {
-	padding: 5px;
-}*/
-
-/*#subscribeListLabel {
-	margin: 0;
-	padding: 5px;
-	text-align: center;
-	background-color: rgb(255,245,245);
-	color: rgb(185,74,72);
-	border-bottom: 1px solid #ddd;
-}*/
-
-/*.subscribeListItem {
-	padding: 3px 6px 4px 6px;
-	background-color: rgb(184,75,72);
-	border-radius: 5px;
-	display: inline-block;
-	margin: 2px;
-	text-shadow: 1px 1px #444;
-	color: white;
-}*/
-
-/*#subscribeButton {
-	background-color: white;
-	border: 1px solid rgb(185,74,72);
-	color: rgb(185,74,72);
-}*/
-
-/*#subscribeButton:hover {
-	background-color: rgb(185,74,72);
-	color: white;
-}*/
-
-/*#subscriptionListContainer {
-	background-color: #f5f5f5;
-	border: 1px solid #aaa;
-	box-shadow: 1px 1px 4px #aaa;
-	margin-top: 20px;
-	padding: 0;
-}*/
 
 .logLine {
 	padding-left: 15px;
@@ -458,7 +362,7 @@ body {
 
 .sidebar-nav {
     position: absolute;
-    top: 0;
+    top: 0px;
     right:15px;
     width: 200px;
     margin: 0;
